--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Filter App</title>
+    <title>Filter App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,3 +26,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
