--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                     </div>
                 </div>
 
+                <div class="tool-section" id="tool-options">
+                    <h3>Tool Options</h3>
+                    <div id="options-content"></div>
+                </div>
+
                 <div class="tool-section">
                     <h3>Transform</h3>
                     <button class="action-btn" id="rotate-left">
@@ -82,7 +87,7 @@
             <!-- Canvas Area -->
             <div class="canvas-container">
                 <div class="canvas-wrapper">
-                    <canvas id="canvas"></canvas>
+                    <div id="layers-container"></div>
                     <div class="canvas-overlay" id="crop-overlay" style="display: none;"></div>
                 </div>
                 <div class="canvas-controls">
